other/allowed-label-changes/.chainsaw-test/chainsaw-step-02-apply-1.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    breakglass: dont
    foo: bar
  name: pod01
spec:
  containers:
  - image: busybox:1.35
    name: busybox
