other/allowed-label-changes/.chainsaw-test/chainsaw-step-02-apply-2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod02
spec:
  containers:
  - image: busybox:1.35
    name: busybox
