other/allowed-label-changes/.chainsaw-test/chainsaw-step-02-apply-4.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
    breakglass: dont
    foo: bar
  name: deployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
      - image: busybox:1.35
        name: busybox
