other/allowed-label-changes/.chainsaw-test/chainsaw-step-02-apply-5.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    breakglass: dont
    foo: bar
  name: ss01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  serviceName: busybox
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
      - image: busybox:1.35
        name: busybox
