other/allowed-label-changes/.chainsaw-test/chainsaw-step-02-apply-6.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    breakglass: dont
    foo: bar
    k8s-app: fluentd-logging
  name: ds01
spec:
  selector:
    matchLabels:
      name: ds01
  template:
    metadata:
      labels:
        name: ds01
    spec:
      containers:
      - image: ghcr.io/kyverno/test-busybox:1.35
        name: ds01
