other/allowed-label-changes/.chainsaw-test/chainsaw-step-02-apply-7.yaml
apiVersion: batch/v1
kind: Job
metadata:
  labels:
    breakglass: dont
    foo: bar
  name: job01
spec:
  backoffLimit: 4
  template:
    spec:
      containers:
      - command:
        - sleep
        - "3600"
        image: busybox:1.35
        name: busybox
      restartPolicy: Never
