other/allowed-label-changes/.chainsaw-test/chainsaw-step-02-apply-8.yaml
apiVersion: batch/v1
kind: CronJob
metadata:
  labels:
    breakglass: dont
    foo: bar
  name: cronjob01
spec:
  jobTemplate:
    spec:
      template:
        spec:
          containers:
          - command:
            - sleep
            - "3600"
            image: busybox:1.35
            imagePullPolicy: IfNotPresent
            name: bb
          restartPolicy: OnFailure
  schedule: '* * * * *'
