other/allowed-label-changes/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: allowed-label-changes
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../allowed-label-changes.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: chainsaw-step-02-apply-1.yaml
    - apply:
        file: chainsaw-step-02-apply-2.yaml
    - apply:
        file: chainsaw-step-02-apply-3.yaml
    - apply:
        file: chainsaw-step-02-apply-4.yaml
    - apply:
        file: chainsaw-step-02-apply-5.yaml
    - apply:
        file: chainsaw-step-02-apply-6.yaml
    - apply:
        file: chainsaw-step-02-apply-7.yaml
    - apply:
        file: chainsaw-step-02-apply-8.yaml
  - name: step-03
    try:
    - apply:
        file: good-update.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: bad-update.yaml
